# TT

./: .gitignore  Grammar.hs  README.md  TT.cabal  do  do.bat  run  run.bat
app/: Evaluation.hs  Expression.hs  Grammar.hs  Main.hs  Parser.hs  Subs.hs  TypeInference.hs  Utils.hs
