name:                TT
version:             0.1.0.0
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable TT-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Evaluation
                     , Expression
                     , Grammar
                     , Parser
                     , Subs
                     , TypeInference
                     , Utils
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , attoparsec
                     , bytestring
                     , mtl
  default-language:    Haskell2010
